# imgsort

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
locales/: app.yml  en.toml  se.toml
src/: actions.rs  image_widget.rs  main.rs  pathlist.rs  settings.rs  sorting.rs  task_manager.rs  ui.rs
