[package]
name = "imgsort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.2.15"
iced = { version = "0.13.1", features = ["debug", "image", "tokio"] }
iced_native = "0.10.3"
iced_wgpu = { version = "0.13.5", features = ["image"] }
rand = "0.8.5"
reqwest = { version = "0.12.0", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
webpki-roots = { version = "0.26.0-alpha.2" }
