[package]
name = "imgsort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
getrandom = "0.2.15"
iced = { version = "0.13.1", features = [
    "advanced",
    "debug",
    "image",
    "tokio",
    "canvas",
    "advanced",
] }
iced_native = "0.10.3"
iced_wgpu = { version = "0.13.5", features = ["image"] }
iced_aw = { version = "0.12.0", default-features = false, features = [
    "drop_down",
    "tab_bar",
    "tabs",
] }
image = "0.25.5"
log = "0.4.22"
rand = "0.8.5"
futures = "0.3.30"
reqwest = { version = "0.12.0", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
simplelog = { version = "0.12.2", features = ["paris"] }
tokio = { version = "1.41.1", features = ["full"] }
webpki-roots = { version = "0.26.0-alpha.2" }
tokio-macros = { version = "0.2.0-alpha.6" }
clap = { version = "4.5.38", features = ["derive"] }
rfd = "0.15.3"
itertools = "0.14.0"
rust-i18n = "3.1.5"

[package.metadata.i18n]
available-locales = ["en", "se"]
default-locale = "en"
load-path = "locales"
